修复编译错误

--- a/proj/vstudio2012/mvcgame/mvcgame.vcxproj
+++ b/proj/vstudio2012/mvcgame/mvcgame.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -19,13 +19,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -41,7 +41,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)/../../src;$(SolutionDir)/../../lib/platform/win/libpng/include;$(SolutionDir)/../../lib/platform/win/libzlib/include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>$(SolutionDir)/../../src;$(SolutionDir)/../../lib/spine/include;$(SolutionDir)/../../lib/platform/win/libpng/include;$(SolutionDir)/../../lib/platform/win/libzlib/include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -79,8 +79,6 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\src\mvcgame\action\ActionRunner.cpp" />
     <ClCompile Include="..\..\..\src\mvcgame\action\TweenAction.cpp" />
-    <ClCompile Include="..\..\..\src\mvcgame\asset\AssetsManager.cpp" />
-    <ClCompile Include="..\..\..\src\mvcgame\asset\BaseAssetsManager.cpp" />
     <ClCompile Include="..\..\..\src\mvcgame\asset\FileStreamLoader.cpp" />
     <ClCompile Include="..\..\..\src\mvcgame\base\Application.cpp" />
     <ClCompile Include="..\..\..\src\mvcgame\base\Color.cpp" />
