--- a/proj/vstudio2012/mvcgame/mvcgame.vcxproj
+++ b/proj/vstudio2012/mvcgame/mvcgame.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="..\..\..\src\mvcgame\action\ActionRunner.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\action\IAction.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\action\TweenAction.hpp" />
+    <ClInclude Include="..\..\..\src\mvcgame\asset\AssetManager.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\asset\AssetStreamParam.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\asset\FileStreamLoader.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\asset\IAssetLoader.hpp" />
@@ -173,6 +174,9 @@
     <ClInclude Include="..\..\..\src\mvcgame\platform\IFilesystemBridge.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\platform\win\ApplicationBridge.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\platform\win\FilesystemBridge.hpp" />
+    <ClInclude Include="..\..\..\src\mvcgame\skeleton\SpineSkeleton.hpp" />
+    <ClInclude Include="..\..\..\src\mvcgame\skeleton\SpineSkeletonLoader.hpp" />
+    <ClInclude Include="..\..\..\src\mvcgame\texture\CocosTextureAtlasLoader.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\texture\GdxTextureAtlasLoader.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\texture\PngTextureLoader.hpp" />
     <ClInclude Include="..\..\..\src\mvcgame\texture\SpriteFrame.hpp" />
