工程结构调整 引入entity 引入puremvc

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ install_manifest.txt
 bin
 /proj/vstudio2012/mvcgame/Debug/*
 /proj/vstudio2012/hello/Debug/*
+/proj/vstudio2012/tiled/Debug/*
 /proj/vstudio2012/Debug/*
 /proj/vstudio2012/ipch/*
 *.sdf
